--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   http: ^1.2.0
 
   # -- For Date and Time format
-  intl: ^0.18.1
+  intl: 0.19.0
 
   logger: ^2.0.2+1
   lottie: ^3.1.0
@@ -27,7 +27,6 @@ dependencies:
   connectivity_plus: ^5.0.2
   flutter_native_splash: ^2.3.10
   smooth_page_indicator: ^1.1.0
-  device_preview: ^1.1.0
   shimmer: ^3.0.0
   image_picker: ^1.0.7
   cached_network_image: ^3.3.1
@@ -78,9 +77,6 @@ flutter:
     - assets/images/on_boarding_image/
     - assets/images/animations/
     - assets/images/categories/
-    - assets/images/banners/
-    - assets/images/products/
-    - assets/images/cloths/
 
 
       #categories
